<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timer" Id="{aeefe981-e5e8-4d3b-93e3-4a2dfdf9a64e}">
    <Declaration><![CDATA[TYPE ST_Timer :
STRUCT
	bTimerStart : BOOL; 
	tTimer : TIME; 
	bTimerOn : BOOL;
	tElapsedTime : TIME; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>